# modules/apps/headless/headless-portal-instances/headless-portal-instances-impl/rest-openapi.yaml
@@ -146,12 +146,6 @@ paths:
             description:
                 Imports a DB partition portal instance
             operationId: postPortalInstanceImport
-            parameters:
-                -   in: header
-                    name: idempotency-key
-                    required: false
-                    schema:
-                        type: string
             requestBody:
                 content:
                     application/json:
